# Embarcatech_projeto_final_final

./: README.md
Esp32_borda/Esp32_tester/src/: functions.cpp  functions.h  main.cpp  variaveis_globais.c  variaveis_globais.h
Esp32_wifi_uart/src/: functions.h  main.cpp
homecontrol/: CMakeLists.txt
homecontrol/src/: functions.c  functions.h  main.c  variaveis_globais.h
picow_tcpip_server/: CMakeLists.txt  functions.h  picow_tcp_server.c
rp2040-freertos-template/: CMakeLists.txt
rp2040-freertos-template/src/: CMakeLists.txt  FreeRTOSConfig.h  functions.c  functions.h  main.c  variaveis_globais.c  variaveis_globais.h
teste_esp32/Esp32_tester/src/: main.cpp
